# backuppilot

./: .dockerignore  .gitignore  ANALYSIS.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE_REVIEW.md  LICENSE  PENTEST.md  PLAN.md  README.md  SECURITY.md  VALIDATION.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  snyk.yml
k8s/: deployment.yaml  kustomization.yaml  service.yaml
src/backuppilot/: __init__.py  __main__.py  api.py  checks.py  cli.py  config.py  db.py  events.py  notify.py
tests/: conftest.py  test_api.py  test_checks.py  test_cli.py  test_cli_extended.py  test_config.py  test_coverage_gaps.py  test_db.py  test_events.py  test_integration.py  test_notify.py
